# routes/index.js
@@ -8,5 +8,6 @@ router.get('/', (req, res) => {
 router.use('/players', require('./players'));
 router.use('/stadiums', require('./stadiums'));
 router.use('/matches', require('./matches'));
+router.use('/teams', require('./teams'));
 
 module.exports = router;
